# computer-architecture-labs

./: .gitignore
4sem/lab01/: bit_ops.cpp  gdb.txt  make.txt  no_segfault_ex.cpp
4sem/lab02/unittest/: DecoderTests.cpp
4sem/lab03/: ex1.circ  ex2.circ  ex5.circ
5sem/lab1/: CMakeLists.txt  lab1.cpp
5sem/lab2/: CMakeLists.txt  freeze_mutex.txt  no_freeze_mutex.txt  no_sleep.txt  part1.h  part2.txt  part_1.cpp  part_2.cpp  sleep.txt
5sem/lab3/: CMakeLists.txt  main.cpp
lab01/: lfsr.cpp  ll_cycle.cpp  segfault_ex.cpp  speciality
lab02/src/: Cpu.h  Executor.h  Instruction.h
lab02/unittest/: ExecutorTests.cpp
lab03/: ex3.circ  ex4.circ
lab04/: ex1.circ
